# FL_Architectures_for_WiFi_Based_Human_Activity_Recognition

./: README.md  main.ipynb
flwr-wifi-har-fl-architectures/: pyproject.toml
flwr-wifi-har-fl-architectures/main/: analysis.ipynb  client_app.py  server_app.py  task.py
