[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-wifi-har-fl-architectures"
version = "1.0.1"
description = "Federated Learning Architectures for WiFi-Based Human Activity Recognition"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "main.server_app:app"
clientapp = "main.client_app:app"


[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 0.5
local-epochs = 5
learning-rate = 1e-3
batch-size = 64
model = "cnn"  # Options: "cnn", "resnet50", "densenet"
